--- a/quiz.html
+++ b/quiz.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QUIZ - Netflix</title>
-    <link rel="shortcut icon" href="../assets/icon/netflixIcon.png" type="image/x-icon">
+    <title>QUIZ - PDA</title>
+    <link rel="shortcut icon" href="assets/icon/user-graduate-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="styleQuiz.css">
 </head>
 <body>
     <main>
         <section class="imagens">
-            <img src="" alt="Logo da Netflix" class="logoNetflix" id="imgFundo">
-            <img src="" alt="foto de Andrey" class="fotoAndrey" id="imgPerfil">
+            <img src="" alt="Logo" class="logo" id="imgFundo">
+            <img src="" alt="foto" class="foto" id="imgPerfil">
         </section>
 
         <section class="card">
