--- a/quiz.html
+++ b/quiz.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QUIZ - PDA</title>
-    <link rel="shortcut icon" href="assets/icon/user-graduate-solid.svg" type="image/x-icon">
-    <link rel="stylesheet" href="styleQuiz.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="assets/icon/user-graduate-solid.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="styleQuiz.css" />
+  </head>
+  <body>
     <main>
-        <section class="imagens">
-            <img src="" alt="Logo" class="logo" id="imgFundo">
-            <img src="" alt="foto" class="foto" id="imgPerfil">
-        </section>
+      <section class="imagens">
+        <img src="" alt="Logo" class="logo" id="imgFundo" />
+        <img src="" alt="foto" class="foto" id="imgPerfil" />
+      </section>
 
-        <section class="card">
-            <div>
-
-                <h1>.</h1>
-                <p>.</p>
-                <ul type="none">
-                    <li>.</li>
-                    <li>.</li>
-                    <li>.</li>
-                    <li>.</li>
-                </ul>
-                <input type="text" placeholder="Sua resposta" id="resposta" class="resposta" list="opcao" maxlength="1">
-                <datalist id="opcao">
-                    <option value="A">.</option>
-                    <option value="B">.</option>
-                    <option value="C">.</option>
-                    <option value="D">.</option>
-                </datalist>
-                <button onclick="verificar()">Verificar</button>
-
-            </div>
-        </section>
+      <section class="card">
+        <div>
+          <h1>.</h1>
+          <p>.</p>
+          <ul type="none">
+            <li>.</li>
+            <li>.</li>
+            <li>.</li>
+            <li>.</li>
+          </ul>
+          <input
+            type="text"
+            placeholder="Sua resposta"
+            id="resposta"
+            class="resposta"
+            list="opcao"
+            maxlength="1"
+          />
+          <datalist id="opcao">
+            <option value="A">.</option>
+            <option value="B">.</option>
+            <option value="C">.</option>
+            <option value="D">.</option>
+          </datalist>
+          <button onclick="verificar()">Verificar</button>
+        </div>
+      </section>
     </main>
     <script src="scriptQuiz.js"></script>
-</body>
+  </body>
 </html>
