--- a/final.html
+++ b/final.html
@@ -17,7 +17,7 @@
             <h1>PARABENS POR FINALIZAR !</h1>
             <p>Após uma dificil batalha, você conseguiu.</p>
             <img src="assets/img/trofeu.png" alt="troféu">
-            <a href="quiz.html"><button>START</button></a>
+            <a href="index.html"><button>RECOMECAR</button></a>
         </div>
         
 
